# ble-mesh-gradient-routing-nrf54

./: .gitignore  AGENTS.md  CMakeLists.txt  GRADIENT_topo_log_20260423_154945.csv  Gateway.py  Gateway_main.py  Kconfig  README.md  README.rst  build_log.txt  chat_cli.rst  index.html  prj.conf  run_gateway.bat  sample_description.rst  tmp_lines.txt  topo_files.txt  train_lightgbm.py
DataLogging/: 20 nodes Grid.csv  20 nodes Tree.csv  30 node Grid.csv  30 nodes Tree.csv  40 node Grid.csv  40 node tree.csv  FINAL_LATENCY_20260206_143643.csv  FINAL_LATENCY_20260206_155517.csv  FINAL_LATENCY_20260206_155658.csv  FINAL_LATENCY_20260206_163340.csv  FINAL_LATENCY_20260206_172941.csv  FINAL_LATENCY_20260207_091711.csv  FINAL_LATENCY_20260207_121922.csv  FINAL_LATENCY_20260207_122052.csv  FINAL_LATENCY_20260207_144723.csv  FINAL_LATENCY_20260207_153831.csv  FINAL_LATENCY_20260207_161039.csv  FINAL_LATENCY_20260207_161854.csv  FINAL_LATENCY_20260207_170309.csv  Note 30-1-2026.txt  sink_logger.py  wsn_log_20260123_155858.csv  wsn_pdr_full_20260126_153040.csv  wsn_pdr_hops_20260126_171121.csv  wsn_pdr_hops_20260126_171300.csv  wsn_pdr_hops_20260126_171713.csv  wsn_pdr_hops_20260128_163735.csv  wsn_pdr_hops_20260128_172130.csv  wsn_pdr_hops_20260128_172147.csv  wsn_pdr_hops_20260128_172217.csv  wsn_pdr_hops_20260128_174534.csv  wsn_pdr_hops_20260128_183849.csv  wsn_pdr_hops_20260128_184032.csv  wsn_pdr_hops_20260128_184232.csv  wsn_pdr_hops_20260129_100815.csv  wsn_pdr_hops_20260129_101711.csv  wsn_pdr_hops_20260129_102656.csv  wsn_pdr_hops_20260129_104003.csv  (+42 more)
docs/: khaibaocambien  (+9 more)
(+74 files in other folders)
